assets/css/dark-mode.css
/* dark mode specific stylesheet tweaks */

/* Change the background color of the workbench and its panels in dark mode */
.lm_goldenlayout {
  background: #333;
}
body .lm_content {
  background-color: #444;
  border: 1px solid #777;
}

/* Fix the background color of the panel bodies and the tabs */
body .lm_header .lm_tab {
  background-color: #3b3b3b;
  border-color: #777;
}
body .lm_header .lm_tab:hover {
  color: white;
}
body .lm_header .lm_tab.lm_active {
  background-color: #444;
  color: white;
}

/* Change the color of splitters */
.lm_splitter {
  background: #444;
}
.lm_splitter:hover,
.lm_splitter.lm_dragging {
  background: #222;
}

/* OpenLayers widget customizations */
.ol-control button, .ol-control button:hover, .ol-control button:focus {
  background-color: #444 !important;
  color: #fff !important;
}
.ol-attribution {
  background-color: rgba(68, 68, 68, 0.8) !important;
  color: #fff !important;
}
.ol-attribution ul {
  color: rgba(255, 255, 255, 0.7) !important;
  text-shadow: none;
}
.ol-attribution ul a, .ol-attribution ul a:hover, .ol-attribution ul a:active, .ol-attribution ul a:visited  {
  color: #fff !important;
  text-decoration: none;
}
.ol-mouse-position {
  background-color: #444 !important;
  color: #fff !important;
}
.ol-scale-line {
  background-color: #444 !important;
  border-color: #444 !important;
}
.ol-scale-line-inner {
  border-color: #fff !important;
  color: #fff !important;
}

/* Keyboard tag styling */
kbd {
  background: #616161 !important;
  box-shadow: 1px 1px 1px #333;
  color: #ddd !important;
}

kbd:hover, kbd:hover * {
  color: white !important;
}

/* The rest comes directly from the dark mode stylesheet of react-flexible-workbench */
.lm_dragProxy .lm_content {
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
}
.lm_dropTargetIndicator {
  box-shadow: inset 0 0 30px #000000;
  outline: 1px dashed #cccccc;
  transition: all 200ms ease;
}
.lm_dropTargetIndicator .lm_inner {
  background: #000000;
  opacity: 0.2;
}
.lm_header .lm_tab .lm_close_tab {
  width: 11px;
  height: 11px;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAATElEQVR4nG3OwQ0DMQwDwZGRBtR/j1YJzMc5+IDoR+yCVO29g+pu981MFgqZmRdAfU7+CYWcbF11LwALjpBL0N0qybNx/RPU+gOeiS/+XCRwDlTgkQAAAABJRU5ErkJggg==);
  background-position: center center;
  background-repeat: no-repeat;
  top: 4px;
  right: 6px;
  opacity: 0.4;
}
.lm_header .lm_tab .lm_close_tab:hover {
  opacity: 1;
}
.lm_header .lm_controls .lm_tabdropdown:before {
  color: #ffffff;
}
.lm_controls .lm_popout {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAPklEQVR4nI2Q0QoAIAwCNfr/X7aXCpGN8snBdgejJOzckpkxs9jR6K6T5JpU0nWl5pSXTk7qwh8SnNT+CAAWCgkKFpuSWsUAAAAASUVORK5CYII=);
}
.lm_controls .lm_maximise {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAKElEQVR4nGP8////fwYCgImQAgYGBgYWKM2IR81/okwajIpgvsMbVgAwgQYRVakEKQAAAABJRU5ErkJggg==);
}
.lm_controls .lm_close {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAQUlEQVR4nHXOQQ4AMAgCQeT/f6aXpsGK3jSTuCVJAAr7iBdoAwCKd0nwfaAdHbYERw5b44+E8JoBjEYGMBq5gAYP3usUDu2IvoUAAAAASUVORK5CYII=);
}
.lm_maximised .lm_header {
  background-color: #333;
}
.lm_maximised .lm_controls .lm_maximise {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJ0lEQVR4nGP8//8/AzGAiShVI1YhCwMDA8OsWbPwBmZaWhoj0SYCAN1lBxMAX4n0AAAAAElFTkSuQmCC);
}
.lm_transition_indicator {
  background-color: #333;
  border: 1px dashed #555;
}
.lm_popin .lm_icon {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA0AAAAJCAYAAADpeqZqAAAAWklEQVR4nJWOyw3AIAxDHcQC7L8jbwT3AlJBfNp3SiI7dtRaLSlKKeoA1oEsKSQZCEluexw8Tm3ohk+E7bnOUHUGcNh+HwbBygw4AZ7FN/Lt84p0l+yTflV8AKQyLdcCRJi/AAAAAElFTkSuQmCC);
  background-position: center center;
  background-repeat: no-repeat;
  border-left: 1px solid #eeeeee;
  border-top: 1px solid #eeeeee;
  opacity: 0.7;
}
.lm_popin:hover .lm_icon {
  opacity: 1;
}

